--- a/Code/pinniped_stranding_analysis.Rmd
+++ b/Code/pinniped_stranding_analysis.Rmd
@@ -9,9 +9,10 @@ output:
 editor_options:
   chunk_output_type: inline
 ---
->Set Up
 
-```{r Setup, warning = FALSE, message = FALSE}
+### Pinniped : Set Up
+
+```{r Initial setup, warning = FALSE, message = FALSE}
 library(tidyverse)
 library(tidyr)
 library(lubridate)
@@ -44,47 +45,53 @@ theme_set(mytheme)
 
 
 ```{r Data Setup}
+#Reading in initial dataset
 Stranding_Data <- read.csv("../Data/Processed/strandings_final.csv", stringsAsFactors = TRUE)
 
+#Wrangling for pinniped only data
 Pinniped_Stranding_Data <- Stranding_Data %>%
   filter(Family == "Pinnipeds") %>%
   select(Family:longitude)
 
+
 Pinniped_Stranding_Data$Date <- as.Date(Pinniped_Stranding_Data$Date, format = "%Y-%m-%d")
-
-
-
-Annual_Strandings_Totals <- read.csv("../Data/Processed/annual_strandings_totals.csv", stringsAsFactors = TRUE)
-
-Annual_Pinniped_Strandings <- Annual_Strandings_Totals %>%
-  select(Year, Pinnipeds_Total)
-
-Monthly_Strandings_Totals <- read.csv("../Data/Processed/monthly_strandings_totals.csv", stringsAsFactors = TRUE)
-
-Monthly_Pinniped_Strandings <- Monthly_Strandings_Totals %>%
-  select(Month, Pinnipeds_Total)
-
 
 
 Pinniped_Stranding_Totals <- Pinniped_Stranding_Data %>%
                     filter(Family == "Pinnipeds") %>%
                     group_by(Date) %>%
                     summarise(Total = n())
+
+
+#Reading in and wrangling strandings by year
+Annual_Strandings_Totals <- read.csv("../Data/Processed/annual_strandings_totals.csv", stringsAsFactors = TRUE)
+
+Annual_Pinniped_Strandings <- Annual_Strandings_Totals %>%
+  select(Year, Pinnipeds_Total)
+
+
+
+#Reading in and wrangling strandings by month
+Monthly_Strandings_Totals <- read.csv("../Data/Processed/monthly_strandings_totals.csv", stringsAsFactors = TRUE)
+
+Monthly_Pinniped_Strandings <- Monthly_Strandings_Totals %>%
+  select(Month, Pinnipeds_Total)
 ```
 
 
->Pinniped Data Exploration
+## Pinniped Stranding Exploratory Analysis
 
 ```{r Pinniped Data Exploration}
 summary(Pinniped_Stranding_Data)
 
+#Plot of annual pinniped strandings
 ggplot(Pinniped_Stranding_Data) +
   geom_bar(aes(x = Year, fill = common_name)) +
   ylab("Count") +
   labs(title = "Total Pinniped Strandings per Year by Species") + 
   scale_fill_discrete(name = "Pinniped Species", labels = c("Atlantic Gray Seal", "Harbor Seal", "Harp Seal", "Hooded Seal", "Unidentified Pinniped"))
 
-
+#Plot of overall monthly pinniped strandings
 ggplot(Pinniped_Stranding_Data) +
   geom_bar(aes(x = Month, fill = common_name)) +
   ylab("Count") +
@@ -96,6 +103,7 @@ ggplot(Pinniped_Stranding_Data) +
 
 
 ```{r, message = FALSE}
+#Plot of annual pinniped strandings with trend line
 Pinniped_Stranding_Plot <-
 ggplot(Annual_Pinniped_Strandings, aes(x = Year, y = Pinnipeds_Total)) +
   geom_line(color = "red") +
@@ -106,11 +114,12 @@ ggplot(Annual_Pinniped_Strandings, aes(x = Year, y = Pinnipeds_Total)) +
 print(Pinniped_Stranding_Plot)
 ```
 
-Possible overall increasing trend in pinniped strandings and possible monthly/seasonal trend.
+>Data exploration indicates a possible overall increasing trend in pinniped strandings and a possible monthly/seasonal trend.  There is some fluctuation in number of total yearly strandings both for the family as a whole and at the species level, although a more detailed species level analysis is beyond the scope of this project. Harp and harbor seals make up most of the strandings each year. Most yearly strandings occur in the late winter and spring time, particularly in March, with very few in the late summer through the early winter.  Springtime coincides with the pupping seasons for many seal species and could be a factor in this.
 
 
 
 ```{r Geospatial Exploration}
+#Spatial frame to visualize the stranding data spatially.
 Pinniped_sf <- Pinniped_Stranding_Data %>%
   st_as_sf(coords = c("longitude", "latitude"), crs = 4326)
 
@@ -119,44 +128,46 @@ mapview(Pinniped_sf)
 
 
 
->Pinniped Analysis
+### Pinniped Stranding Analysis
 
 
->>Statisical Analysis
+## Pinniped Statisical Analysis
 
-Null Hypothesis 1: There is no effect of year on the total number of pinniped strandings
-Alternative Hypothesis 1: There is an effect of year on the total number of pinniped strandings
+>Null Hypothesis 1: There is no effect of year on the total number of pinniped strandings
+>Alternative Hypothesis 1: There is an effect of year on the total number of pinniped strandings
 
-Null Hypothesis 2: There is no effect of month on the total number of pinniped strandings
-Alternative Hypothesis 2: There is an effect of month on the total number of pinniped strandings
+>Null Hypothesis 2: There is no effect of month on the total number of pinniped strandings
+>Alternative Hypothesis 2: There is an effect of month on the total number of pinniped strandings
 
 ```{r ANOVA Models}
-Pinniped_Model <- aov(data = Annual_Pinniped_Strandings, Pinnipeds_Total ~ Year)
+#Developing an model to analysis the significance of year on pinniped strandings
+Annual_Pinniped_Model <- glm(data = Annual_Pinniped_Strandings, Pinnipeds_Total ~ factor(Year), family = poisson)
 
-Pinniped_Model
+summary(Annual_Pinniped_Model)
 
-summary.aov(Pinniped_Model)
 
-Pinniped_Model2 <- aov(data = Monthly_Pinniped_Strandings, Pinnipeds_Total ~ Month)
+#Developing an model to analysis the significance of month on pinniped strandings
+Monthly_Pinniped_Model <- glm(data = Monthly_Pinniped_Strandings, Pinnipeds_Total ~ factor(Month), family = poisson)
 
-Pinniped_Model2
-
-summary.aov(Pinniped_Model2)
+summary(Monthly_Pinniped_Model)
 ```
 
-We reject the null hypothesis that there is no effect of year on the total number of pinniped strandings due to a p-value of 0.027.  We also reject the null hypothesis that there is no effect of month on the total number of pinniped strandings due to a p-value of 0.018.  These  effects could likely be explained by differing environmental factors each year, however our dataset did not include such data.  This could be an avenue of further research for a future project, if such environmental data is available.    
+> We reject the null hypothesis that there is no effect of year on the total number of pinniped strandings.  18 of the 21 documented years were statistically significant with p-values ranging from 9.07e-09(2001) to 0.03(1999).  Only the first three years of data, 1991-1993 had p-values above 0.05.  The null deviance of yearly model was 1.36e+02 on 21 degrees of freedom, and residual deviance of 1.31e-14
+
+> We reject the null hypothesis that there is no effect of month on the total number of pinniped strandings.  11 of the 12 months had p-values of less than 0.05, with July being the exception.  The p-values of the statistically significant month ranged from 1.77e-15(March) to 0.02(June).  The null deviance for the monthly model was 5.95e+02 on 11 degrees of freedom and a residual deviance of -3.55e-15. 
 
 
 
->>Geospatial Analysis
+## Pinniped Geospatial Analysis
 
 ```{r}
+#Converting the data points to UTM for further analysis. The study are straddles UTM zones 18 and 19, zone 19 was chosen because that is where the greatest concentration of points seems to be located.
+
 Pinniped_sf_utm <- st_transform(Pinniped_sf,32619)
-#The data points straddle UTM zones 18 and 19, zone 19 was chosen because that is where the greatest concentration of points seems to be located.
 
 Pinniped_sf_utm$geometry
 
-
+#Determining "mean" stranding point for distance comparisons
 long_mean <- mean(Pinniped_Stranding_Data$longitude)
 lat_mean <- mean(Pinniped_Stranding_Data$latitude)
 
@@ -167,7 +178,7 @@ Pinniped_Mean_sf <- Pinniped_Stranding_Mean_Point %>%
 
 Pinniped_Mean_UTM <- st_transform(Pinniped_Mean_sf,32619)
 
-
+#Creating a distance matrix for further analysis
 Pinniped_Distance_Matrix <- st_distance(Pinniped_sf_utm, Pinniped_sf_utm, pairwise = T)
 
 mean_distance <-  rowMeans(Pinniped_Distance_Matrix)
@@ -177,17 +188,16 @@ Pinniped_sf_utm  <-  Pinniped_sf_utm %>%
 ```
 
 ```{r}
+#Visualizing stranding point distance from "mean"
 mapview(Pinniped_sf_utm, 
         zcol = "mean_distance",
         layer.name = "Distance (m) from Mean Stranding Point")
 ```
 
-Knowing where the "mean" stranding location is could allow for a study of that area in order to determine why pinniped strandings are so prominent on this area and allow for the allocation of more recovery resources and personnel to that area to compensate for the higher levels of strandings. 
-
-
-
 
 ```{r Distance Table}
+#Developing a mean distance table
+
 # points within 40,000m
 Pinniped_40 <- Pinniped_sf_utm %>%
   filter(mean_distance < 40000) %>%
@@ -240,13 +250,16 @@ Pinniped_distances <- Pinniped_sf_utm_final %>%
 kable(Pinniped_distances)
 ```
 
+> By finding the "mean" stranding location based on the all of the data points it can be determined how far each stranding point is from the mean.  By determining that 425 out of 679, or 62.5 percent of, pinniped strandings occur within 40km of the mean stranding location, what makes this area a hotspot can be studied and hopefully also determined.  This data also could allow for reallocation of stranding resources and personnel to this range in order to put them to the most efficient use possible.  Since only 54, or 8 percent of, pinniped strandings occur further than 60km from the stranding mean, resources for study and rescue can be allocated away from those areas.
 
->>Temporal Analysis
 
-Null Hypothesis: The yearly and/or monthly/seasonal pinniped stranding data is stationary
-Alternative Hypothesis: The yearly and/or monthly/seasonal pinniped stranding data is not stationary
+## Pinniped Temporal Analysis
+
+>Null Hypothesis: The yearly and/or monthly/seasonal pinniped stranding data is stationary
+>Alternative Hypothesis: The yearly and/or monthly/seasonal pinniped stranding data is not stationary
 
 ```{r Monthly Time Series}
+#Developing a monthly time series to determine if there is a monthly/seasonal trend.
 f_month <- month(first(Pinniped_Stranding_Totals$Date))
 f_year <- year(first(Pinniped_Stranding_Totals$Date))
 
@@ -263,10 +276,10 @@ Pinniped_ts_monthly_trend <- Kendall::SeasonalMannKendall(Pinniped_ts_monthly)
 summary(Pinniped_ts_monthly_trend)
 ```
 
-Fail to reject the H0 that monthly pinniped strandings are stationary, with a p-value of 0.48, but there could be some seasonality based on this graph.
-
+> We fail to reject the H0 that monthly pinniped strandings are stationary, with a p-value of 0.48, but there could be some seasonality based on the decomposition
 
 ```{r Yearly Time Series}
+#Developing a yearly time series to determine if there is a trend
 Pinniped_ts_yearly <- ts(Pinniped_Stranding_Totals, start = c(1990,1), frequency = 1)
 
 Pinniped_ts_yearly_trend <- Kendall::SeasonalMannKendall(Pinniped_ts_yearly)
@@ -274,7 +287,7 @@ Pinniped_ts_yearly_trend <- Kendall::SeasonalMannKendall(Pinniped_ts_yearly)
 summary(Pinniped_ts_yearly_trend)
 ```
 
-Reject the H0 that yearly pinniped strandings are stationary with a p-value or 2.22e-16.
+> We reject the H0 that yearly pinniped strandings are stationary with a p-value or 2.22e-16.  This analysis fits with the trend line plotting in the exploration of the pinniped data.
 
 
 
